--- a/css/mobile.css
+++ b/css/mobile.css
@@ -51,9 +51,14 @@
     margin-left: 10px;
     margin-right: 10px;
   }
+  .mt-40 {
+    margin-right: 0;
+  }
 
   .certificate-info {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 10px 10px !important;
     border-bottom: 1px solid #d6c08d;
   }
@@ -87,6 +92,12 @@
     border: 1px solid rgb(185, 185, 185);
   }
   .project-name {
+    height: auto;
+  }
+  .table tr:first-child {
+    height: auto;
+  }
+  .table tr:nth-child(4) {
     height: auto;
   }
 }
