--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 600px) {
+  /* Adjust nav bar layout */
   #nav-bar {
     all: initial;
   }
@@ -16,12 +17,14 @@
     margin: 10px auto;
     text-align: center;
   }
-  #avatar-space {
-    display: none;
-  }
+  /* Adjust personal info layout */
   #about > .container-custom {
     display: block;
   }
+  .mt-40 {
+    margin-right: 0;
+  }
+  /* Adjust banner layout */
   #banner {
     top: 20%;
     font-size: 10px;
@@ -36,23 +39,13 @@
   .banner-img {
     height: 120px;
   }
-  #certificate .container-custom {
-    margin: 0;
-  }
+  /* Adjust certificate layout */
+
   .certificate-info:nth-child(1)::after {
     all: initial;
   }
   .certificate-info:nth-child(3) {
     border: none;
-  }
-
-  #job-info .container-custom {
-    display: block;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  .mt-40 {
-    margin-right: 0;
   }
 
   .certificate-info {
@@ -62,16 +55,19 @@
     padding: 10px 10px !important;
     border-bottom: 1px solid #d6c08d;
   }
-  .certificate-info > img {
-    width: 100%;
-    height: auto;
-  }
-
   .certificate-container {
     display: block;
     margin-left: 15px;
     margin-right: 15px;
   }
+
+  /* Adjust job info class layout */
+  #job-info .container-custom {
+    display: block;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  /* Adjust project layout */
   .project-container {
     margin-left: 15px;
     margin-right: 15px;
